<resources>
    <string name="app_name">Louvre</string>
    <string name="home">Home</string>
    <string name="explore">Explore</string>
    <string name="collections">Collections</string>
    <string name="favorite">Favorite</string>

    <string name="collections_title">Collections</string>
    <string name="likes_title">Likes</string>
    <string name="photos_title">Photos</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="search_title_hint">Watcha gonna want?</string>
    <string name="explore_title">Photos, Tags, or Collections</string>
    <string name="cancel">Cancel</string>

<!--    BottomSheet-->
    <string name="sort_by">Sort by</string>
    <string name="trending">Trending</string>
    <string name="latest">Latest</string>
    <string name="oldest">Oldest</string>
</resources>
