<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="user"
            type="non.shahad.stayhomegallery.data.db.entity.User" />
    </data>
<androidx.cardview.widget.CardView
    android:id="@+id/bottomsheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:behavior_hideable="false"
    app:behavior_peekHeight="80dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            bindCircleImageView="@{user.profileImage}"
            android:src="@mipmap/profile"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/BottomSheetUsernameStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@{user.name}"
            app:layout_constraintStart_toEndOf="@+id/circleImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:minLines="1"
            android:maxLines="2"
            android:fontFamily="@font/sans_regular_family"
            android:text="@{user.bio}"
            app:layout_constraintBottom_toBottomOf="@+id/circleImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/circleImageView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@color/very_basic_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/circleImageView" />

        <TextView
            android:id="@+id/textView4"
            style="@style/BottomSheetLikesTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/collections"
            app:layout_constraintBottom_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView3"
            style="@style/BottomSheetLikesTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/likes_title"
            app:layout_constraintEnd_toStartOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/textView2"
            style="@style/BottomSheetLikesTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/photos_title"
            app:layout_constraintBottom_toBottomOf="@+id/textView4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/view"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView5"
            style="@style/BottomSheetPrefTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(user.totalLikes)}"
            app:layout_constraintEnd_toEndOf="@+id/textView3"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            style="@style/BottomSheetPrefTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="100"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            style="@style/BottomSheetPrefTitleStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{String.valueOf(user.totalPhotos)}"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ImageView
            android:id="@+id/instagramBtn"
            android:layout_width="@dimen/bottomsheet_icon_width_height"
            android:layout_height="@dimen/bottomsheet_icon_width_height"
            android:src="@drawable/ic_instagram"
            app:layout_constraintBottom_toBottomOf="@+id/twitterBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/twitterBtn" />

        <ImageView
            android:id="@+id/twitterBtn"
            android:layout_width="@dimen/bottomsheet_icon_width_height"
            android:layout_height="@dimen/bottomsheet_icon_width_height"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_twitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/instagramBtn"
            app:layout_constraintHorizontal_bias="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <ImageView
            android:id="@+id/portfolioBtn"
            android:layout_width="@dimen/bottomsheet_icon_width_height"
            android:layout_height="@dimen/bottomsheet_icon_width_height"
            android:src="@drawable/ic_portfolio"
            app:layout_constraintBottom_toBottomOf="@+id/instagramBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/instagramBtn"
            app:layout_constraintTop_toTopOf="@+id/instagramBtn"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>
</layout>